# AI-Powered-Resume-Screening-and-Candidate-Ranking-System-for-Recruiters

./: .gitignore  README.md  requirement.txt  run_project.bat
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
frontend/: index.html  script.js  style.css
